[gd_scene load_steps=6 format=3 uid="uid://vv5vrq33li6k"]

[ext_resource type="Script" uid="uid://cjg2ab1a66bb2" path="res://scenes/main_menu/mainMenu.gd" id="1_6a8hk"]
[ext_resource type="PackedScene" uid="uid://ce48caxhixn3" path="res://shared/ui/menu/settings.tscn" id="2_yymsy"]

[sub_resource type="LabelSettings" id="LabelSettings_smiem"]
font_size = 80

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o11ik"]
bg_color = Color(0.396889, 0.396889, 0.396889, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yymsy"]
font_size = 50

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6a8hk")

[node name="headline" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.5
offset_top = -240.0
offset_right = 268.5
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
text = "3D Shooter"
label_settings = SubResource("LabelSettings_smiem")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.5
offset_right = 75.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="startGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start game"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Open settings"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="settingsWindow" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -250.0
offset_right = 225.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o11ik")

[node name="headline" type="Label" parent="settingsWindow"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_yymsy")
horizontal_alignment = 1

[node name="Settings" parent="settingsWindow" instance=ExtResource("2_yymsy")]
layout_mode = 1
offset_top = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="VBoxContainer/startGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
